configurable ui repo refresh rate
